k3s_cluster/base/dmz/media/unpackerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-media-unpackerr
spec:
  type: ClusterIP
  selector:
    app: dmz-media-unpackerr
  ports:
    - name: web
      protocol: TCP
      port: 6667
      targetPort: 8080
