k3s_cluster/base/dmz/media/unpackerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dmz
  labels:
    app: dmz-media-unpackerr
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`unpackerr.media.dmz.home`)
      middlewares:
        - name: dmz-media-middleware-auth-trauth # authentik
      services:
        - name: dmz-media-unpackerr-service
          port: 6667
  #tls: {}
